--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,6 +2,8 @@
 
 <ul>
   <% @products.each do |product| %>
-    <li><%= product.strain %></li>
+    <li><%= link_to product.strain, product_path(product) %></li>
   <% end %>
 </ul>
+
+<%= link_to "New Product", new_product_path %>
