create reviews table and work up to create method

--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,12 +1,8 @@
-<h1>Edit product</h1>
-
 <% if @product.errors.any? %>
-  <h3>Please fix these errors:</h3>
+  <h3>Oops there were some errors. Please try again:</h3>
   <ul>
     <% @product.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
   </ul>
 <% end %>
-
-<%= render "layouts/form" %>
