--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,33 @@
 <h1><%= @product.strain %></h1>
 
+<ul>
+    <li><%= @product.strain %></li>
+    <li><%= @product.cann_abbr %></li>
+    <li><%= @product.cost %></li>
+    <li><%= @product.origin %></li>
+</ul>
+
+<% if @product.reviews.any? %>
+  <h4>Here are the reviews for this product:</h4>
+
+  <ul>
+    <% @product.reviews.each do |review| %>
+      <li>
+        <%= review.description %> |
+        <%= link_to "Edit", edit_product_review_path(@product, review) %> |
+        <%= link_to "Delete", product_review_path(@product, review),
+                                 :data => {:confirm => "Are you sure?",
+                                                :method => "delete"} %>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>There are no reviews yet!</p>
+<% end %>
+
+<p><%= link_to "Add a review", new_product_review_path(@product) %></p>
 <p><%= link_to "Return to products", products_path %></p>
+<p> <%= link_to "Edit", edit_product_path(@product) %> </p>
+<p><%= link_to "Delete", product_path(@product),
+                         :data => {:confirm => "You sure?",
+                                   :method => "delete"} %></p>
