--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -1,15 +1,13 @@
 <%= render "layouts/errors", :object => @product %>
 
-
-
 <%= form_for @product do |f| %>
-  <%= f.label :author%>
-  <%= f.text_field (:author) %>
-
-  <%= f.label :description %>
-  <%= f.text_area_tag(:description, "Write a review here", size: "24x6") %>
-
-  <%= f.label :rating%>
-  <%= f.number_field(:rating, in: 1.0..5.0,) %>
-
+  <%= f.label :strain %>
+  <%= f.text_field :strain %>
+  <%= f.label :cann_abbr %>
+  <%= f.text_field :cann_abbr %>
+  <%= f.label :cost%>
+  <%= f.number_field :cost %>
+  <%= f.label :origin %>
+  <%= f.text_field :origin %>
   <%= f.submit  %>
+<% end %>
