--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Write a review for <%= @product.strain %></h1>
+<h1>Write a review for strain: <%= @product.strain %></h1>
 
 
 <% if @review.errors.any? %>
@@ -11,15 +11,18 @@
 <% end %>
 
 
-<%= form_for @review do |f| %>
+<%= form_for [@product, @review] do |f| %>
   <%= f.label :author%>
   <%= f.text_field (:author) %>
 
   <%= f.label :description %>
-  <%= f.text_area_tag(:description, "Write a review here", size: "24x6") %>
+  <%= f.text_field (:description) %>
+  <!-- <%= text_area_tag(:description, "Write a review here", size: "24x6") %> -->
 
   <%= f.label :rating%>
   <%= f.number_field(:rating, in: 1.0..5.0,) %>
 
-  <%= f.submit  %>
+  <%= f.submit "submit"  %>
 <% end %>
+
+<!--new_product_review_path  -->
