--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,11 +13,12 @@
   <ul>
     <% @product.reviews.each do |review| %>
       <li>
-        <%= review.description %> |
-        <%= link_to "Edit", edit_product_review_path(@product, review) %> |
+        "<%= review.description %>" -<%=review.author%> | rating: <%= review.rating %>
+        <br>
         <%= link_to "Delete", product_review_path(@product, review),
-                                 :data => {:confirm => "Are you sure?",
-                                                :method => "delete"} %>
+        :data => {:confirm => "Are you sure?",
+          :method => "delete"} %>
+        <!-- <%= link_to "Edit", edit_product_review_path(@product, review) %> | -->
       </li>
     <% end %>
   </ul>
