add cards as styling to site

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,12 @@
 body {
   background-color: #f2f2f2;
 }
+
+.card {
+  border: 1px solid black;
+}
+
+.card-img-top {
+  width: 100px;
+  height: 100px;
+}
