--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,9 +1,19 @@
 <h1>Products</h1>
 
-<ul>
+<div class="row">
   <% @products.each do |product| %>
-    <li><%= link_to product.strain, product_path(product) %></li>
+    <div class="col-md-3">
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="https://webiconspng.com/wp-content/uploads/2017/09/Cannabis-PNG-Image-27186.png" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title"><%= product.strain %></h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <button class="btn btn-info"><%= link_to product.strain, product_path(product) %></button>
+      </div>
+    </div>
+  </div>
   <% end %>
-</ul>
+</div>
+
 
 <%= link_to "New Product", new_product_path %>
