--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,8 +7,8 @@
       <img class="card-img-top" src="https://webiconspng.com/wp-content/uploads/2017/09/Cannabis-PNG-Image-27186.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title"><%= product.strain %></h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <button class="btn btn-info"><%= link_to product.strain, product_path(product) %></button>
+        <p class="card-text">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,.</p>
+        <button id="info-button" class="btn btn-info"><%= link_to product.strain, product_path(product) %></button>
       </div>
     </div>
   </div>
