--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,34 +1,47 @@
 <h1><%= @product.strain %></h1>
+<p><%= link_to "Return to products", products_path %></p>
 
-<ul>
-    <li><%= @product.strain %></li>
-    <li><%= @product.cann_abbr %></li>
-    <li><%= @product.cost %></li>
-    <li><%= @product.origin %></li>
-</ul>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card" style="width: 50rem;">
+        <center><img class="card-img-top" id="product_img" src="/weed<%=rand(9)%>.png" alt="Card image cap"></center>
+        <div class="card-body">
+          <p class="card-text">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Cannabis Type: <strong><%= @product.cann_abbr %></strong></li>
+          <li class="list-group-item">Price per gram: <strong><%= @product.cost %>$</strong></li>
+          <li class="list-group-item">Strain nationaility:<strong> <%= @product.origin %></strong></li>
+        </ul>
+        <div class="card-body">
+          <p> <%= link_to "Edit Product", edit_product_path(@product) %> </p>
+          <p><%= link_to "Delete Product", product_path(@product),
+          :data => {:confirm => "You sure?",
+            :method => "delete"} %></p>
+        </div>
+      </div>
+    </div>
 
-<% if @product.reviews.any? %>
-  <h4>Here are the reviews for this product:</h4>
+    <% if @product.reviews.any? %>
+    <h4>Here are the reviews for this product:</h4>
 
-  <ul>
-    <% @product.reviews.each do |review| %>
+    <ul>
+      <% @product.reviews.each do |review| %>
       <li>
-        "<%= review.description %>" -<%=review.author%> | rating: <%= review.rating %>
-        <br>
-        <%= link_to "Delete", product_review_path(@product, review),
-        :data => {:confirm => "Are you sure?",
-          :method => "delete"} %>
+      "<%= review.description %>" -<%=review.author%> | rating: <%= review.rating %>
+      <br>
+      <%= link_to "Delete", product_review_path(@product, review),
+      :data => {:confirm => "Are you sure?",
+        :method => "delete"} %>
         <!-- <%= link_to "Edit", edit_product_review_path(@product, review) %> | -->
       </li>
-    <% end %>
-  </ul>
-<% else %>
-  <p>There are no reviews yet!</p>
-<% end %>
+      <% end %>
+    </ul>
+      <% else %>
+      <p>There are no reviews yet!</p>
+      <% end %>
+      <p><%= link_to "Add a review", new_product_review_path(@product) %></p>
 
-<p><%= link_to "Add a review", new_product_review_path(@product) %></p>
-<p><%= link_to "Return to products", products_path %></p>
-<p> <%= link_to "Edit", edit_product_path(@product) %> </p>
-<p><%= link_to "Delete", product_path(@product),
-                         :data => {:confirm => "You sure?",
-                                   :method => "delete"} %></p>
+  </div>
+</div>
