--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,17 @@
 
   <body>
   <div class="container">
-
     <div class="jumbotron">
       <h1 id="jumbotron">OG Flowers</h1>
     </div>
+
+<!-- add to navbar later -->
+    <% if current_user %>
+      <%= current_user.email %> | <%= link_to "Sign out", '/signout' %>
+    <% else %>
+      <%= link_to "Sign up", 'signup' %> | <%= link_to "Sign in", '/signin' %>
+    <% end %>
+<!--  -->
 
     <%= flash[:alert] %>
     <%= flash[:notice] %>
